# Abejaruco

./: .gitignore  CMakeLists.txt  Makefile  noise_reduction.c  requisitos.txt  sensor  sensor+.cpp  sensor.c  sensor_data_with_noise.csv
include/: Decorator.hpp  FilteringDecorator.hpp  LoggingDecorator.hpp  NoiseCreator.hpp  NoiseReduction.hpp  NoiseReductionDecorator.hpp  PluginInterface.hpp  Sensor.hpp
src/: Decorator.hpp  Makefile  NoiseCreator.cpp  NoiseCreator.hpp  NoiseReduction.cpp  NoiseReduction.hpp  PluginInterface.hpp  Sensor.cpp  Sensor.hpp  main.cpp
